# cache-tool

./: CMakeLists.txt  README.md
include/: CacheDefs.h  CacheScan.h  ts-compat.h
include/tscore/: ts_CryptoHash.h  ts_HashContext.h
src/: CacheScan.cc  CacheTool.cc  Compatibility.cc
